--- a/package.json
+++ b/package.json
@@ -10,20 +10,26 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-community/checkbox": "^0.5.12",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/bottom-tabs": "^6.3.1",
+    "@react-navigation/material-bottom-tabs": "^6.2.1",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "@react-navigation/stack": "^6.0.11",
     "@types/react-native-vector-icons": "^6.4.10",
     "react": "17.0.2",
     "react-native": "0.66.4",
+    "react-native-bouncy-checkbox": "^2.1.10",
+    "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^2.1.0",
     "react-native-get-random-values": "^1.7.2",
+    "react-native-paper": "^4.12.0",
     "react-native-reanimated": "^2.2.4",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
     "react-native-uuid": "^2.0.1",
-    "react-native-vector-icons": "^9.0.0",
+    "react-native-vector-icons": "^9.1.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
